dnl Process this file with autoconf to produce a configure script.
AC_INIT(ImpFeGui.c)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_CHECK_PROGS(LINT, lint lclint)
AC_PATH_X

dnl Checks for libraries.
dnl Replace `main' with a function in -lX11:
AC_CHECK_LIB(X11, main)
dnl Replace `main' with a function in -lXpm:
AC_CHECK_LIB(Xpm, main)
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, main)
dnl Replace `main' with a function in -lforms:
AC_CHECK_LIB(forms, main, , , -lX11 -lm)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h strings.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_HEADER_TIME

dnl Checks for library functions.
AC_FUNC_MMAP
AC_CHECK_FUNCS(bcopy bzero index memcpy memmove munmap strchr gettimeofday socket)

AC_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile)
